v0.12.02 Rewrite Full Code, Small Fix